--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
+# Remove Spring Banner
 spring.main.banner-mode=off
+# Enable terminal colors
 spring.output.ansi.enabled=ALWAYS
+# Console Logging Athens time
+logging.pattern.dateformat=dd/MM/yyyy HH:mm:ss.SSS,Europe/Athens
