--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,8 @@
     <artifactId>kougianos</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>kougianos</name>
-    <description>Algorithmic exercises and puzzles implemented in Java 11.</description>
+    <description>Generic Spring Boot application that contains quizzes, util classes, converters and much more.
+    </description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
