--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,14 @@
             <version>3.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jdbc</artifactId>
+            <version>2.0.9.RELEASE</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
