--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,11 @@
             <version>2.0.9.RELEASE</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.21</version>
+        </dependency>
 
     </dependencies>
 
