SQL Integration: update pojo and application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.main.banner-mode=off
 spring.output.ansi.enabled=ALWAYS
 # Console Logging Athens time
 logging.pattern.dateformat=dd/MM/yyyy HH:mm:ss.SSS,Europe/Athens
+# Jdbc Initial DB Config
+spring.datasource.initialization-mode=always
+spring.datasource.schema=classpath:/schema.sql
+spring.datasource.data=classpath:/data.sql
