--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,10 @@
             <version>3.25.0-GA</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+        </dependency>
 
     </dependencies>
 
