Gearhost credentials to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ logging.pattern.dateformat=dd/MM/yyyy HH:mm:ss.SSS,Europe/Athens
 spring.datasource.initialization-mode=always
 spring.datasource.schema=classpath:/schema.sql
 spring.datasource.data=classpath:/data.sql
+#Gearhost credentials
+gearhost.username=ghtestdb
+gearhost.password=Bn0k2Q8!DtU?
