--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# suppress inspection "UnusedProperty" for whole file
 # Remove Spring Banner
 spring.main.banner-mode=off
 
@@ -12,6 +13,12 @@ spring.datasource.initialization-mode=always
 spring.datasource.schema=classpath:/schema.sql
 spring.datasource.data=classpath:/data.sql
 
-#Gearhost credentials
+# Gearhost credentials
 gearhost.username=ghtestdb
 gearhost.password=Bn0k2Q8!DtU?
+
+# Test properties for GetValuesFromPropertiesConfig
+test.string=someValue
+test.number=5
+test.array=value1,value2,value3
+test.boolean=true
