inject properties guide

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,4 @@ test.string=someValue
 test.number=5
 test.array=value1,value2,value3
 test.boolean=true
+test.listOfStrings={'value1','value2','value3'}
