--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,9 @@ spring.datasource.initialization-mode=always
 spring.datasource.schema=classpath:/schema.sql
 spring.datasource.data=classpath:/data.sql
 
+# MongoDB
+mongo.uri=mongodb+srv://kougi:bZLLIGw5cmoT5VbA@cluster0.wbmr7.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+
 # Gearhost credentials
 gearhost.username=ghtestdb
 gearhost.password=Bn0k2Q8!DtU?
