Mongo & SQL conditional on properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,11 +12,14 @@ logging.pattern.dateformat=dd/MM/yyyy HH:mm:ss.SSS,Europe/Athens
 spring.datasource.initialization-mode=always
 spring.datasource.schema=classpath:/schema.sql
 spring.datasource.data=classpath:/data.sql
+sql.enabled=false
 
 # MongoDB
 mongo.uri=mongodb+srv://kougi:bZLLIGw5cmoT5VbA@cluster0.wbmr7.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+mongo.enabled=false
 
 # Gearhost credentials
+gearhost.url=jdbc:mysql://den1.mysql5.gear.host/ghtestdb
 gearhost.username=ghtestdb
 gearhost.password=Bn0k2Q8!DtU?
 
