add tcnative-1.dll for tomcat

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,5 @@ test.number=5
 test.array=value1,value2,value3
 test.boolean=true
 test.listOfStrings={'value1','value2','value3'}
+
+#logging.level.root=DEBUG
