insert user in mongodb through controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ sql.enabled=false
 
 # MongoDB
 mongo.uri=mongodb+srv://kougi:bZLLIGw5cmoT5VbA@cluster0.wbmr7.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
-mongo.enabled=false
+mongo.enabled=true
 
 # Gearhost credentials
 gearhost.url=jdbc:mysql://den1.mysql5.gear.host/ghtestdb
