--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,4 +30,7 @@ test.array=value1,value2,value3
 test.boolean=true
 test.listOfStrings={'value1','value2','value3'}
 
+# Jackson configuration
+spring.jackson.default-property-inclusion=non_null
+
 #logging.level.root=DEBUG
